bugfix text align to center

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -267,6 +267,11 @@
         height: 400px !important;
         margin: 0 !important;
         
+        .row-mobile{
+            width: unset !important;
+            margin-bottom: 20px;
+        }
+
         span.header{
             font-size: 30px !important;
         }
